# src/modules/users/useCases/createUser/createUser.routes.ts
@@ -1,0 +1,15 @@
+import { IRouteDefinition } from '../../../..//types/core'
+import CreateUserMapper from './createUser.mapper'
+import { createUser } from './createUser.controller'
+
+const routes: IRouteDefinition = {
+  CreateUser: {
+    controller: createUser,
+    mapper: CreateUserMapper.createUser,
+    method: 'POST',
+    path: '/user',
+    security: ['default']
+  }
+}
+
+export default routes
