# src/modules/users/useCases/getUser/getUser.routes.ts
@@ -1,0 +1,15 @@
+import { IRouteDefinition } from '../../../..//types/core'
+import GetUserMapper from './getUser.mapper'
+import { getSelf } from './getUser.controller'
+
+const routes: IRouteDefinition = {
+  GetSelf: {
+    controller: getSelf,
+    mapper: GetUserMapper.getSelf,
+    method: 'GET',
+    path: '/user/me',
+    security: ['default']
+  }
+}
+
+export default routes
